# glad

./: .gitignore  CMakeLists.txt  readme.txt
include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h  glx.h  wgl.h
source/: glad.c  glad_egl.c  glad_glx.c  glad_wgl.c  glx.c
